# aoe4-matchmaking

./: .gitattributes  .gitignore  README.md  aoe4-matchmaking.code-workspace  pyproject.toml
backend/: README.md  pyproject.toml
backend/models/: classifier_model.xgb
backend/notebooks/: BuildModel.ipynb  build_model.ipynb
backend/src/: main.py
backend/src/core/: paged_query.py  paged_result.py  result.py
backend/src/matchmaking/: matchmaker.py
backend/src/models/: player.py  player_id.py  predict_match_outcome.py
backend/src/routers/: __init__.py  api.py  matchmaking_router.py  players_router.py
backend/src/services/: player_service.py
docs/: AOE4 Matchmaking System.pptx  project-proposal.md  project-report.docx
frontend/: angular.json  bun.lockb  package.json
frontend/src/: index.html  main.ts
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/models/: index.ts  paged-query.dto.ts  paged-result.dto.ts  pair-players.dto.ts  player-id.dto.ts  player.dto.ts  predict-match-outcome.dto.ts
frontend/src/app/core/services/: api.service.ts  index.ts
frontend/src/app/pages/players/: route.ts  (+2 more)
frontend/src/styles/: global.scss
models/: classifier_model.joblib  classifier_model.xgb
notebooks/: build_model.ipynb
src/: notebook.ipynb
src/core/: __init__.py  base_model.py  path_utils.py
src/matchmaking/: __init__.py  matchmaker.py
src/models/: __init__.py  pair_players.py  player.py
src/routers/: __init__.py  api.py  matchmaking_router.py
src/services/: __init__.py  player_service.py
(+10 files in other folders)
